--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
     </queries>
 
     <application
-        android:label="academy_lms_app"
+        android:label="Elegance Pro"
         android:name="${applicationName}"
         android:usesCleartextTraffic="true"
         tools:replace="android:usesCleartextTraffic"
